chore(scroll): fix minimum and visible scroll

--- a/src/Pages/Licences/Licences.css
+++ b/src/Pages/Licences/Licences.css
@@ -8,6 +8,7 @@
   width: 78%;
   padding: 20px;
   margin-top: 10px;
+  overflow: scroll;
 }
 .licheader {
   width: 100%;
@@ -39,14 +40,13 @@
 }
 .lictable {
   color: #797979;
-  overflow: scroll;
   white-space: nowrap;
+  overflow: auto;
 }
 .lictables {
-  width: 100%;
-  max-height: 90%;
-  min-height: 90px;
-  overflow: scroll;
+  max-height: 70vh;
+  min-height: 10vh;
+  overflow: auto;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 }
 .filebox {
