--- a/src/Pages/Storage/Storage.css
+++ b/src/Pages/Storage/Storage.css
@@ -9,12 +9,12 @@
   width: 78%;
   padding: 20px;
   margin-top: 10px;
+  overflow: scroll;
 }
 .stotables {
-  width: 100%;
-  max-height: 75%;
-  min-height: 90px;
-  overflow: scroll;
+  max-height: 70vh;
+  min-height: 10vh;
+  overflow: auto;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 }
 .stoheader {
@@ -46,6 +46,7 @@
 .stotable {
   color: #797979;
   white-space: nowrap;
+  overflow: auto;
 }
 .stoselector {
   width: 100%;
