--- a/src/Pages/VirtualMachine/css/VirtualMachineList.css
+++ b/src/Pages/VirtualMachine/css/VirtualMachineList.css
@@ -9,6 +9,7 @@
   width: 78%;
   padding: 20px;
   margin-top: 10px;
+  overflow: scroll;
 }
 .vmlheader {
   width: 100%;
@@ -27,11 +28,15 @@
   color: #f28e00;
 }
 .vmltables {
-  width: 100%;
-  max-height: 75%;
-  min-height: 90px;
-  overflow: scroll;
+  max-height: 70vh;
+  min-height: 10vh;
+  overflow: auto;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+}
+.vmltable {
+  color: #797979;
+  white-space: nowrap;
+  overflow: auto;
 }
 .vmltablebody {
   font-size: 16px;
@@ -39,10 +44,6 @@
 .vmltablehead {
   font-weight: bold;
   font-size: 14px;
-}
-.vmltable {
-  color: #797979;
-  white-space: nowrap;
 }
 .vmlbtncontainer {
   cursor: pointer;
